@@ -1,1 +1,5 @@
 Bài tập về nhà ở phần src của mỗi project
+
+Để chạy AIMS project thì chạy file ControllerScreen và thêm argument này "--module-path
+${project_classpath:AimsProject} --add-modules javafx.controls,javafx.fxml
+--add-modules javafx.web,javafx.media,javafx.swing" để chạy được
